// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVFilter filters the signal 1`] = `
Float32Array [
  -1,
  1,
  -1,
  1,
  -1,
  1,
  -1,
  1,
  -1,
  1,
  -1,
  1,
  -1,
  1,
  -1,
  1,
  -1,
  1,
  -1,
  1,
]
`;

exports[`SVFilter filters the signal 2`] = `
Float32Array [
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
]
`;

exports[`SVFilter filters the signal 3`] = `
Float32Array [
  -10.25,
  -0.75,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
]
`;
